--- a/index.html
+++ b/index.html
@@ -51,24 +51,24 @@
 							<section class="post featured">
 								<article>
 									<header>
-										<h2><a href="https://shiva410.github.io/ZodiacWorld/" target="_blank">Zodiac World</a></h2>
+										<h2><a href="https://uspro410.github.io/ZodiacWorld/" target="_blank">Zodiac World</a></h2>
 									</header>
-									<a href="https://shiva410.github.io/ZodiacWorld/" target="_blank" class="image fit"><img src="ZW.png" alt="Zodiac_World" /></a>
+									<a href="https://uspro410.github.io/ZodiacWorld/" target="_blank" class="image fit"><img src="ZW.png" alt="Zodiac_World" /></a>
 									<p>Zodiac World is a website designed to help users learn a bit more about the Eastern and Western zodiac signs. The index page contains an overall description of the website. When users enter the site, it will show a pop-up asking users to enter their names. After the user enters his/her name, the “Welcome!” message at the end of the introduction will be modified to include user’s name. The “About Us” page includes a link titled “Who are we and what is the purpose of this site”. When user clicks the link, this section expands to show the details of the site. The Eastern and Western Zodiac pages include videos with controls/sliders to provide playback assistance for users. Finally, the Resources page offers a list of resources used for the website, while the “Contact Us” page includes a form with validation features for collecting user information. All pages also include an interactive navigation bar with hover features, and a non-interactive sidebar with a zodiac list. HTML, CSS, Javascript, and JQuery were used to build this site.</p>
 									<ul class="actions special">
-										<li><a href="https://shiva410.github.io/ZodiacWorld/" target="_blank" class="button">Explore</a></li>
+										<li><a href="https://uspro410.github.io/ZodiacWorld/" target="_blank" class="button">Explore</a></li>
 									</ul>
 								</article>
 							</section>
 							<section class="post featured">
 								<article>
 									<header>
-										<h2><a href="https://shiva410.github.io/AnimationReception/" target="_blank">Animation Reception</a></h2>
+										<h2><a href="https://uspro410.github.io/AnimationReception/" target="_blank">Animation Reception</a></h2>
 									</header>
-									<a href="https://shiva410.github.io/AnimationReception/" class="image fit" target="_blank"><img src="AR.png" alt="Animation Reception" /></a>
+									<a href="https://uspro410.github.io/AnimationReception/" class="image fit" target="_blank"><img src="AR.png" alt="Animation Reception" /></a>
 									<p>Animation Reception is a website that contains information about the plots and popularity statistics of various Anime. Included are rollover images and a sign-up form. Each input field of the form has validation features and will only be submitted once the user fills out the form properly. Regarding the images, each picture is set up with a rollover feature such that if a user hovers over an image, another image is displayed. HTML, CSS, Javascript, and JQuery were used to build this website.</p>
 									<ul class="actions special">
-										<li><a href="https://shiva410.github.io/AnimationReception/" class="button" target="_blank">Explore</a></li>
+										<li><a href="https://uspro410.github.io/AnimationReception/" class="button" target="_blank">Explore</a></li>
 									</ul>
 								</article>
 							
@@ -76,12 +76,12 @@
 							<section class="post featured">
 								<article>
 									<header>
-										<h2><a href="https://shiva410.github.io/SpaceGallery/" target="_blank">Space Gallery</a></h2>
+										<h2><a href="https://uspro410.github.io/SpaceGallery/" target="_blank">Space Gallery</a></h2>
 									</header>
-									<a href="https://shiva410.github.io/SpaceGallery/" class="image fit" target="_blank"><img src="SG.png" alt="Space Gallery" /></a>
+									<a href="https://uspro410.github.io/SpaceGallery/" class="image fit" target="_blank"><img src="SG.png" alt="Space Gallery" /></a>
 									<p>Space Gallery is a very simple lightbox designed to provide images from space. Included are pictures of the sun, moon, Earth, Mars, Jupiter, Saturn, as well as our Solar System, Milky Way, and Universe. When the user clicks on an image, the image appears in a larger version. A user can close out of the image by clicking anywhere outside of the image. Javascript (specifically jQuery), CSS, and HTML were used to make this project. </p>
 									<ul class="actions special">
-										<li><a href="https://shiva410.github.io/SpaceGallery/" class="button" target="_blank">Explore</a></li>
+										<li><a href="https://uspro410.github.io/SpaceGallery/" class="button" target="_blank">Explore</a></li>
 									</ul>
 								</article>
 							
