--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 									<header>
 										<h2><a href="https://uspro410.github.io/MemoryGame/" target="_blank">Birthstone Memory Game</a></h2>
 									</header>
-									<a href="https://uspro410.github.io/MemoryGame/" class="image fit" target="_blank"><img src="MG.png" alt="Birthstone Memory Game" /></a>
+									<a href="https://uspro410.github.io/MemoryGame/" class="image fit" target="_blank"><img src="SG.png" alt="Memory Game" /></a>
 									<p>This project is a memory game featuring birthstones to entertain users. Included are pictures of each month with an accompanying birthstone. When the user clicks on a card, the card flips over and reveals a birthstone. Flipping over another card will trigger a pop-up confirming a match or advising to try again. The goal is to find the card with the matching birthstone. Javascript, CSS, and HTML were used to make this project. </p>
 									<ul class="actions special">
 										<li><a href="https://uspro410.github.io/MemoryGame/" class="button" target="_blank">Explore</a></li>
