--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="#">Welcome!</a></h2>
-									<p>Hello! My name is Jodi and I'm a web developer. This site hosts a portfolio of some of the works I have created over the years. I've coded in HTML, CSS, JavaScript, and a few other languages. Feel free to explore!</p>
+									<p>Hello! My name is Jodi and this is a portfolio I built back when I first started coding. This site hosts a portfolio of some of the works I have created over the years. I've coded in HTML, CSS, JavaScript, and a few other languages. My new passion is SQL and Tableau, which are not featured on this site, but nevertheless feel free to explore!</p>
 								</header>
 							</article>
 
